--- a/src/app/chrono/chrono.component.html
+++ b/src/app/chrono/chrono.component.html
@@ -4,56 +4,15 @@
       <button type="button" class="btn btn-primary">Add</button>
     </a>
   </h2>-->
+
+  <app-setup *ngIf="!gh_key"></app-setup>
+
   <div class="row">
     <div class="col-sm">
-      <div class="card card-default">
-        <h4 class="card-header">Author</h4>
-        <div class="card-body">
-          <form [formGroup]="authorForm" (ngSubmit)="createAuthor()">
-            <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Name </label>
-              <div class="col-sm-9">
-                <input type="text" class="form-control" formControlName="name"/>
-              </div>
-              <label class="col-sm-3 col-form-label">Pass </label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" formControlName="pass"/>
-              </div>
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary col-sm-3 col-form-label float-right">Create</button>
-            </div>
-          </form>
-        </div>
-      </div>
     </div>
     <br>
     <div class="col-sm">
-      <div class="card card-default">
-        <h4 class="card-header">Reader</h4>
-        <div class="card-body">
 
-          <form [formGroup]="readerForm" (ngSubmit)="createReader()">
-            <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Name </label>
-              <div class="col-sm-9">
-                <input type="text" class="form-control" formControlName="name"/>
-              </div>
-              <label class="col-sm-3 col-form-label">Reader Pass </label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" formControlName="readerPass"/>
-              </div>
-              <label class="col-sm-3 col-form-label">Author Pass </label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" formControlName="authorPass"/>
-              </div>
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary col-sm-3 col-form-label float-right">Create</button>
-            </div>
-          </form>
-        </div>
-      </div>
     </div>
   </div>
   <br>
@@ -102,17 +61,9 @@
 
           <form [formGroup]="sendForm" (ngSubmit)="sendNote()">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Author Pass </label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" formControlName="authorPass"/>
-              </div>
-              <label class="col-sm-3 col-form-label">Reader Pass </label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" formControlName="readerPass"/>
-              </div>
-              <!--              <label class="col-sm-3 col-form-label">Pass </label>-->
-              <!--              <input type="password" class="form-control" formControlName="pass"/>-->
-              <!--              <br>-->
+              <label class="col-sm-3 col-form-label">Pass </label>
+              <input type="password" class="form-control" formControlName="pass"/>
+              <br>
               <label class="col-sm-3 col-form-label">Title </label>
               <div class="col-sm-9">
                 <input type="text" class="form-control" formControlName="title"/>
